--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="main.js"></script>
 </head>
-<body class="bg-gradient-to-bl from-[#7abbee] to-[#676dc8] flex items-center justify-center min-h-screen font-nunito">
-	<section class="w-full min-h-screen sm:max-w-[460px] bg-[#1d1f33] overflow-hidden relative">
-        <div class="flex bg-no-repeat p-2 items-center justify-center border-b-[2px] border-b-[rgba(255,255,255,0.15)] bg-[rgba(0,0,0,0.8)] w-full absolute bottom-0 text-white h-[100px]">
-        asdasdasdasd
-        </div>
-        <div id="moviez" class="flex flex-col items-center justify-center text-white">
+<body class="bg-gradient-to-bl from-[#7abbee] to-[#676dc8] flex items-center justify-center h-screen font-nunito">
+	<section class="w-full max-w-[460px] bg-[#1d1f33] overflow-hidden h-full sm:h-[1000px] relative">
+        <!-- <div class="absolute h-[80px] w-full bottom-0 bg-black/80 z-20">asdasdasd</div> -->
+        <div id="moviez" class="flex flex-col items-start justify-start h-full text-white">
             <h1 class="py-5 bg-[#272a46] text-[#8ad1f7] text-xl font-[600] w-full relative text-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="absolute cursor-pointer left-5" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#7f94f5" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -27,10 +25,10 @@
                 </svg>
                 Movies 2016
             </h1>
-            <label for="search" class="w-full px-6 my-6">
+            <label for="search" class="w-full px-6 py-6 shadow-[0px_1px_15px_5px_#16172E]">
                 <input type="text" name="search" id="search" class="border outline-none border-[#626493] bg-transparent rounded-full w-full px-5 py-4 placeholder:font-semibold placeholder:text-lg placeholder:text-[#626493]" placeholder="Search movies">
             </label>
-            <div id="movies" class="h-[800px] overflow-y-auto"></div>
+            <div id="movies" class="py-10 overflow-y-auto grow"></div>
             <script>
                 const ulElement = document.getElementById('movies');
 
